# KERN

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.MD  IMPLEMENTATION_SUMMARY.md  INSTALL.md  KERN LANGUAGE .docx  KERN_LANGUAGE.MD  QWEN.md  README.md  check_output.txt  errors.txt  example.rs  flow_pipeline_test.rs  hee_run.kern  how_to_install.md  install-kern.bat  install-kern.sh  lib.rs  output.kbc  rule.kern  semantic_errors.txt  simple.kern  spi.md  test.kern  test.kgraph  test.rs  test_flow_execution.kern  test_flow_pipeline.rs  test_output.txt  vm_errors.txt  workspace_errors.txt
.github/workflows/: test.yml
assets/: README.md
ast/: nodes.rs
demo/: demo_script.kern  hee.kern  hello_world.kern  psi_generated.kern  psi_llm_test.txt  psi_output.rs  psi_tasks.txt
docs/: README.md  apis_integration.md  appendices.md  compiler_runtime.md  examples_tutorials.md  extract_from_llm.md  full_psi_documentation.md  getting_started.md  kern_summary.md  language_reference.md  llm_knowledge_extraction.md  overview.md  psi_blueprint.md  psi_conversation_documentation.md  psi_runtime_llm_integration.md  troubleshooting_faq.md  usage_guide.md
docs/api/: compiler_api.md  integration_api.md  vm_api.md
docs/best_practices/: anti_patterns.md  context_management.md  debugging.md  determinism.md  flow_design.md  performance.md  psi_alignment.md  rule_design.md
docs/reference/: 01_overview.md  02_lexical_structure.md  03_syntax_grammar.md  04_entities.md  05_rules.md  06_flows.md  07_constraints.md  08_types.md  09_control_flow.md  10_contexts.md  11_execution_model.md  12_error_model.md  13_bytecode_mapping.md  (+1 more)
errors/: diagnostics.rs
examples/: hello.kern  simple.kern
kern-ast/: Cargo.toml
kern-bytecode/: Cargo.toml
kern-bytecode/src/: ast_lowering.rs  compiler_driver.rs  emitter.rs  integration_tests.rs  lib.rs  lir.rs  lir_builder.rs  optimizer.rs  register_allocator.rs  serializer.rs  verifier.rs
kern-flow-pipeline/: Cargo.toml  context_manager.rs  control_ops_break_halt.rs  control_ops_if_then_else.rs  control_ops_loop.rs  flow_evaluator.rs  flow_execution_context.rs  flow_step_info.rs  lazy_evaluation_manager.rs  lib.rs  mod.rs  types.rs
kern-graph-builder/: Cargo.toml
kern-lexer/: Cargo.toml  README.md  TOKEN_DEFINITIONS.md  test_lexer.py  test_lexer.rs
kern-parser/: Cargo.toml  test_grammar_productions.rs  test_grammar_verification.rs  test_parser.py
kern-rule-engine/: Cargo.toml  README.md
kern-semantic/: Cargo.toml  bytecode_validator.rs  conflict_detector.rs  dependency_graph.rs  diagnostics.rs  lib.rs  resolver.rs  scope.rs  symbol.rs  type_checker.rs  types.rs
kern-vm/: Cargo.toml
kern-vm/src/: lib.rs
kern-vm/src/vm_safety/: limit_errors.rs  memory_limits.rs  mod.rs  perf_monitor.rs  sandbox.rs  security.rs  step_limits.rs
lexer/: keywords.rs  lexer.rs  token.rs
parser/: entity_parser.rs  expression_parser.rs  parser.rs
psi/: Cargo.toml  brain.json  brain_extracted.json  full_brain.json
psi/src/: language_mappings.rs  lib.rs  main.rs  meta_programs.rs  multimodal_operators.rs  operator_engine.rs
shared/: source_location.rs
src/: lib.rs  main.rs
tests/: README.md  assertions.rs  ast_tests.rs  bytecode_execution_tests.rs  edge_case_tests.rs  error_recovery_tests.rs  execution_order_tests.rs  flow_pipeline_tests.rs  graph_building_tests.rs  lexer_tests.rs  main_test_runner.rs  parser_tests.rs  performance_validation_tests.rs  rule_conflict_tests.rs  rule_engine_tests.rs  rule_evaluation_tests.rs  security_sandboxing_tests.rs  semantic_tests.rs  test_runner.rs  vm_instruction_execution_tests.rs
tools/: README.md  psi_demo_runtime_llm.py
tools/compiler_cli/: Cargo.toml
tools/compiler_cli/src/: main.rs
(+98 files in other folders)
