[workspace]
members = [
    "kern-ast",
    "kern-bytecode",
    "kern-flow-pipeline",
    "kern-graph-builder",
    "kern-lexer",
    "kern-parser",
    "kern-rule-engine",
    "kern-semantic",
    "kern-vm",
]

[package]
name = "kern-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "kern_compiler"
path = "src/lib.rs"

[[bin]]
name = "kern_compiler"
path = "src/main.rs"

[dependencies]
kern_flow_pipeline = { path = "./kern-flow-pipeline" }