[workspace]
members = [
    "kern-ast",
    "kern-bytecode",
    "kern-flow-pipeline",
    "kern-graph-builder",
    "kern-lexer",
    "kern-parser",
    "kern-rule-engine",
    "kern-semantic",
    "kern-vm",
    "tools/compiler_cli",
]

[package]
name = "kern-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "kern_compiler"
path = "src/lib.rs"

[[bin]]
name = "kern_compiler"
path = "src/main.rs"

[dependencies]
kern_vm = { path = "./kern-vm" }
kern_bytecode = { path = "./kern-bytecode" }
kern_flow_pipeline = { path = "./kern-flow-pipeline" }

[dev-dependencies]
kern_parser = { path = "./kern-parser" }
kern_lexer = { path = "./kern-lexer" }
kern_rule_engine = { path = "./kern-rule-engine" }
kern_graph_builder = { path = "./kern-graph-builder" }
kern-semantic = { path = "./kern-semantic" }
kern-ast = { path = "./kern-ast" }