[package]
name = "kern_flow_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "kern_flow_pipeline"
path = "lib.rs"

[dependencies]
kern_graph_builder = { path = "../kern-graph-builder" }
kern_rule_engine = { path = "../kern-rule-engine" }
kern_parser = { path = "../kern-parser" }

[dev-dependencies]