[package]
name = "psi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "psi-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
kern_vm = { path = "../kern-vm", package = "kern_vm" }
kern_bytecode = { path = "../kern-bytecode", package = "kern_bytecode" }
kern_graph_builder = { path = "../kern-graph-builder", package = "kern_graph_builder" }
kern_parser = { path = "../kern-parser", package = "kern_parser" }

[dev-dependencies]