[package]
name = "kern_compiler_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernc"
path = "src/main.rs"

[dependencies]
kern_parser = { path = "../../kern-parser" }
kern_lexer = { path = "../../kern-lexer" }
kern_graph_builder = { path = "../../kern-graph-builder" }
kern_bytecode = { path = "../../kern-bytecode" }
kern_vm = { path = "../../kern-vm" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"